--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,8 @@
 .home {
 
   .intro {
-
+    padding-top: 93px;
+    
     img {
 
       border-radius: 5px;
