--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,11 @@
 // Navigation code here
-
 .nav-container {
   width: 100%;
   .center();
   flex-direction: column;
   background-color: @nav-bg;
+  position: fixed;
+  opacity: .9;
 
     @media @phone {
       background-color: @wild-sand;
@@ -31,3 +32,5 @@
     }
   }
 }
+
+
